--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+  //  "DefaultConnection": "Server=DESKTOP-IHSC7M0\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;",
+    "DefaultConnection": "Server=DESKTOP-IHSC7M0\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+
+  }
 }
+ 
